# slashy

./: .rustfmt.toml  Cargo.toml  LICENSE.md  README.md
example_bot/: Cargo.toml
example_bot/src/: main.rs
serenity_command_handler/src/: argument.rs  lib.rs  permissions.rs  settings.rs  tests.rs
serenity_command_handler_macros/src/: lib.rs
slashy/: Cargo.toml  expand.rs
slashy/src/: argument.rs  commands.rs  framework.rs  lib.rs  permissions.rs  settings.rs  tests.rs
slashy/tests/: argument_parsing.rs  command.rs  subcommand.rs
slashy_macros/: Cargo.toml  README.md
slashy_macros/src/: command.rs  lib.rs  subcommand.rs
