[package]
name = "slashy"
version = "0.1.0"
authors = ["maddymakesgames <madelinemakesgames@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slashy_macros = {path = "../slashy_macros"}

serenity = { git = "https://github.com/serenity-rs/serenity", rev = "dbc40cbe6421060933b2d83176e7ec617adf5c8c", default-features = false, features = ["unstable_discord_api", "builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"] }
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.62"
serde = "1.0.123"
lazy_static = "1.4.0"
regex = "1.4.3"