[package]
name = "slashy"
version = "0.1.1"
authors = ["maddymakesgames <madelinemakesgames@gmail.com>"]
edition = "2018"
readme = "../README.md"
repository = "https://github.com/maddymakesgames/slashy"
homepage = "https://github.com/maddymakesgames/slashy"
description = "An alternative command framework for serenity"
license = "MIT"
keywords = ["discord", "serenity"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slashy_macros = {version = "0.1.0", path = "../slashy_macros"}

serenity = { version = "0.11", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "utils"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
serde = "1"
lazy_static = "1.4"
regex = "1.4"

[features]
default = ["rustls"]
rustls = ["serenity/rustls_backend"]