[package]
name = "slashy_macros"
version = "0.1.2"
authors = ["maddymakesgames <madelinemakesgames@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/maddymakesgames/slashy"
homepage = "https://github.com/maddymakesgames/slashy"
description = "Macros used by slashy"
license = "MIT"
keywords = ["discord", "serenity"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"